# esp32-wrover-kit-bsp-sample

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
components/esp_wrover_kit_bsp/: idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  decode_image.c  decode_image.h  idf_component.yml  main.c  pretty_effect.c  pretty_effect.h
